name: scheduler
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: scheduler
description: Scheduling resources and tasks.
data-dir: ""

executable scheduler
    build-depends: time -any, sqlite-simple -any, base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
